<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.SuperHeroDescriptionActivity">

    <ImageView
        android:id="@+id/iv_superhero"
        android:layout_width="match_parent"
        android:layout_height="@dimen/three_hundred"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/four_hundred_fifty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name_super_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="@string/tv_superhero_name" />

            <TextView
                android:id="@+id/tv_full_name_super_hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                tools:text="@string/tv_superhero_full_name" />

            <TextView
                android:id="@+id/tv_editor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="11sp"
                tools:text="@string/tv_superhero_editor" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/view_intelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_intelligence" />

                <View
                    android:id="@+id/view_strength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_strength" />

                <View
                    android:id="@+id/view_speed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_speed" />

                <View
                    android:id="@+id/view_durability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_durability" />

                <View
                    android:id="@+id/view_power"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_power" />

                <View
                    android:id="@+id/view_combat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/level_combat" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/tv_power_stat_intelligence"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/tv_power_stat_strength"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/tv_power_stat_speed"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/tv_power_stat_durability"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/tv_power_stat_power"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

                <TextView
                    android:text="@string/tv_power_stat_combat"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textSize="10sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>